Fix chessboard width on small screen

--- a/site/assets/css/chess.css
+++ b/site/assets/css/chess.css
@@ -10,6 +10,12 @@
     margin: auto
 }
 
+@media only screen and (max-width: 500px) {
+    .board {
+        width: 100%;
+    }
+}
+
 .info {
     width: 400px;
     margin: auto;
